--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.0"
+    "mysql2": "^3.9.2",
+    "nodemon": "^3.1.0",
+    "sequelize": "^6.37.1"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
