--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
     "react-bootstrap": "^2.10.1",
+    "react-router-dom": "^6.22.3",
     "sequelize": "^6.37.1"
   },
   "devDependencies": {
