--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
+    "pusher": "^5.2.0",
     "react-bootstrap": "^2.10.1",
     "react-router-dom": "^6.22.3",
     "sequelize": "^6.37.1"
